# MK2MK4

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  restart.sh  start.sh  stop.sh
apps/web/: next.config.ts  package.json  storage  vitest.config.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prisma/migrations/20260616030920_init/: migration.sql
apps/web/scripts/: create-operator.ts  e2e-postiz.ts
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/lib/: api.ts  brand.ts  db.ts  env.ts  session.ts
apps/worker/: pyproject.toml
apps/worker/app/: config.py  jobs.py  main.py  quality.py  storage.py  storage_s3.py
apps/worker/app/renderer/: imagery.py  reel.py  vessel.py
apps/worker/scripts/: dev.sh  template_gallery.py
apps/worker/tests/: conftest.py  test_animate.py  test_imagery.py  test_logo.py  test_quality.py  test_reel_motion.py  test_render_paths.py  test_smoke.py  test_storage_s3.py  test_vessel.py  test_vessel_overlay.py
docs/superpowers/plans/: 2026-06-16-ai-imagery-and-ux.md  2026-06-19-garage-autopilot-foundation.md  2026-07-21-guided-creation-wizard.md
docs/superpowers/specs/: 2026-06-16-ai-imagery-and-ux-design.md  2026-06-19-garage-autopilot-foundation-design.md  2026-06-20-learning-loop-design.md  2026-07-21-guided-creation-wizard-design.md
infra/: Dockerfile.scheduler  Dockerfile.web  Dockerfile.worker  docker-compose.override.yml  docker-compose.yml  entrypoint-web.sh  init-operator.js  run-migrations.js
infra/cron/: crontab  run-daily.sh
(+54 files in other folders)
